# llm-trace

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: cli.md  configuration.md  dashboard.md  data-model.md  index.md  langchain.md  observe.md  otel.md  quickstart.md  scoring.md  webhook.md  wrappers.md
examples/: langgraph_fastapi.py  usage.py
llm_trace/: __init__.py  cli.py  core.py  dashboard.py  langchain.py  models.py  otel.py  scores.py  storage.py  webhook.py  wrappers.py
tests/: test_core.py  test_langgraph.py  test_real_llm.py
tests/integration/: README.md  test_langgraph.py  test_real_llm.py
